--- a/.github/workflows/create_challenge_issue.yml
+++ b/.github/workflows/create_challenge_issue.yml
@@ -2,7 +2,7 @@ name: Automatically Update README.md
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 jobs:
   create-challenge-issue:
